[gd_scene load_steps=25 format=3 uid="uid://cvo466687f4cf"]

[ext_resource type="Script" uid="uid://hp60owr8b02m" path="res://UI/character_sheet.gd" id="1_mt5ql"]
[ext_resource type="Texture2D" uid="uid://dpyqtm36daaa3" path="res://assets/CharBackground.png" id="1_xsx1p"]
[ext_resource type="Texture2D" uid="uid://caqqlaaw3f0lk" path="res://assets/ComfyUI_temp_kzypl_00002_.png" id="2_mt5ql"]
[ext_resource type="Texture2D" uid="uid://bh6te561weqjk" path="res://assets/button_normal.png" id="3_ln88o"]
[ext_resource type="FontFile" uid="uid://rmyb1wa46kmm" path="res://assets/PirataOne-Regular.ttf" id="4_s67xq"]
[ext_resource type="Texture2D" uid="uid://4cfwd1yo6kg6" path="res://assets/statbuttonminus_normal.png" id="5_60qo4"]
[ext_resource type="Texture2D" uid="uid://c20b88uc20o2v" path="res://assets/statbuttonminus_pressed.png" id="6_c5ugu"]
[ext_resource type="LabelSettings" uid="uid://co00c7ye8x7m6" path="res://Attributes.tres" id="7_6uub3"]
[ext_resource type="Texture2D" uid="uid://y3im16owyq2q" path="res://assets/statbuttonplus_normal.png" id="8_vdu8u"]
[ext_resource type="Texture2D" uid="uid://c3g4k4xtsv06y" path="res://assets/statbuttonplus_pressed.png" id="9_jqbfb"]
[ext_resource type="FontFile" uid="uid://coy3hwj3m5epf" path="res://assets/CONTFU__.ttf" id="10_krsex"]
[ext_resource type="LabelSettings" uid="uid://docst4png8hn8" path="res://playerstats.tres" id="11_5nr7p"]
[ext_resource type="Texture2D" uid="uid://123rga3pyqj8" path="res://assets/button_pressed.png" id="12_lajhi"]
[ext_resource type="LabelSettings" uid="uid://ck4gbs1wgyjrv" path="res://menufont.tres" id="13_l72y0"]
[ext_resource type="Texture2D" uid="uid://doo4ymd5sxgf3" path="res://assets/Sheetbackgroundframe.png" id="14_facp0"]

[sub_resource type="Gradient" id="Gradient_jn6ll"]
colors = PackedColorArray(0.0862745, 0.101961, 0.105882, 1, 0.0862745, 0.101961, 0.105882, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8ra6u"]
gradient = SubResource("Gradient_jn6ll")

[sub_resource type="LabelSettings" id="LabelSettings_teewc"]
line_spacing = 5.0
font = ExtResource("4_s67xq")
font_size = 50
font_color = Color(1, 1, 0.745098, 1)
outline_size = 1
shadow_size = 8
shadow_color = Color(0.0605303, 0.0605303, 0.0605303, 1)

[sub_resource type="Gradient" id="Gradient_xe7dh"]
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rebkf"]
gradient = SubResource("Gradient_xe7dh")

[sub_resource type="LabelSettings" id="LabelSettings_rqwtp"]
font = ExtResource("4_s67xq")
font_size = 25
font_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2f70k"]
bg_color = Color(1.34766e-06, 0.492717, 0.229062, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vr6v"]
bg_color = Color(0, 0.494118, 0.227451, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcpax"]
bg_color = Color(1.20327e-07, 0.368454, 0.165075, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="CharacterSheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mt5ql")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_8ra6u")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 50.0
offset_right = -40.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterBackground" type="NinePatchRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(330, 452)
layout_mode = 2
texture = ExtResource("1_xsx1p")

[node name="CharacterTexture" type="TextureRect" parent="HBoxContainer/CharacterBackground"]
layout_mode = 1
anchors_preset = -1
anchor_right = 20.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -6306.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mt5ql")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 500)
layout_mode = 2

[node name="Statbackground" type="NinePatchRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(350, 500)
layout_mode = 2
offset_right = 350.0
offset_bottom = 500.0
texture = ExtResource("3_ln88o")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MainStats" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(350, 500)
layout_mode = 1
anchors_preset = -1
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
layout_mode = 2
text = "Attributes"
label_settings = SubResource("LabelSettings_teewc")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Strength" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2

[node name="StatBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Strength"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -25.0
offset_right = 163.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Strength/StatBox" groups=["MinusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_60qo4")
texture_pressed = ExtResource("6_c5ugu")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Strength/StatBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Strength/StatBox/Stats"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Strength"
label_settings = ExtResource("7_6uub3")

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Strength/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.72549, 0, 0, 1)
label_settings = SubResource("LabelSettings_rqwtp")
horizontal_alignment = 1

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Strength/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "28"
label_settings = ExtResource("7_6uub3")

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Strength/StatBox" groups=["PlusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_vdu8u")
texture_pressed = ExtResource("9_jqbfb")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Agility" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2

[node name="StatBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Agility"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -25.0
offset_right = 163.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Agility/StatBox" groups=["MinusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_60qo4")
texture_pressed = ExtResource("6_c5ugu")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Agility/StatBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Agility/StatBox/Stats"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Agility"
label_settings = ExtResource("7_6uub3")

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Agility/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.72549, 0, 0, 1)
label_settings = SubResource("LabelSettings_rqwtp")
horizontal_alignment = 1

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Agility/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "28"
label_settings = ExtResource("7_6uub3")

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Agility/StatBox" groups=["PlusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_vdu8u")
texture_pressed = ExtResource("9_jqbfb")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Endurance" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2

[node name="StatBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Endurance"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -25.0
offset_right = 163.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Endurance/StatBox" groups=["MinusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_60qo4")
texture_pressed = ExtResource("6_c5ugu")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Endurance/StatBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Endurance/StatBox/Stats"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Endurance"
label_settings = ExtResource("7_6uub3")

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Endurance/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.72549, 0, 0, 1)
label_settings = SubResource("LabelSettings_rqwtp")
horizontal_alignment = 1

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Endurance/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "28"
label_settings = ExtResource("7_6uub3")

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Endurance/StatBox" groups=["PlusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_vdu8u")
texture_pressed = ExtResource("9_jqbfb")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Intelligence" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2

[node name="StatBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Intelligence"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -25.0
offset_right = 163.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Intelligence/StatBox" groups=["MinusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_60qo4")
texture_pressed = ExtResource("6_c5ugu")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Intelligence/StatBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Intelligence/StatBox/Stats"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Intelligence"
label_settings = ExtResource("7_6uub3")

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Intelligence/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.72549, 0, 0, 1)
label_settings = SubResource("LabelSettings_rqwtp")
horizontal_alignment = 1

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Intelligence/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "28"
label_settings = ExtResource("7_6uub3")

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Intelligence/StatBox" groups=["PlusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_vdu8u")
texture_pressed = ExtResource("9_jqbfb")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Wisdom" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2

[node name="StatBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Wisdom"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -25.0
offset_right = 163.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Min" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Wisdom/StatBox" groups=["MinusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_60qo4")
texture_pressed = ExtResource("6_c5ugu")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Wisdom/StatBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Wisdom/StatBox/Stats"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Wisdom"
label_settings = ExtResource("7_6uub3")

[node name="Change" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Wisdom/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.72549, 0, 0, 1)
label_settings = SubResource("LabelSettings_rqwtp")
horizontal_alignment = 1

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Wisdom/StatBox/Stats"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "28"
label_settings = ExtResource("7_6uub3")

[node name="Plus" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/Wisdom/StatBox" groups=["PlusButtons"]]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_vdu8u")
texture_pressed = ExtResource("9_jqbfb")
texture_disabled = SubResource("GradientTexture1D_rebkf")

[node name="StatPoints" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats"]
custom_minimum_size = Vector2(326, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Control" type="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/StatPoints"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/StatPoints"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Points: 7"
label_settings = ExtResource("7_6uub3")
vertical_alignment = 1

[node name="Confirm" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/StatPoints"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s67xq")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_2f70k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vr6v")
theme_override_styles/normal = SubResource("StyleBoxFlat_kcpax")
text = "Confirm"

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xsx1p")

[node name="DerivedStats" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -225.0
offset_right = 150.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_krsex")
theme_override_font_sizes/font_size = 36
text = "Player Stats"

[node name="Health" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Text" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health:"
label_settings = ExtResource("11_5nr7p")

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer/Health"]
layout_mode = 2
text = "7789"
label_settings = ExtResource("11_5nr7p")

[node name="Attack" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Text" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer/Attack"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"
label_settings = ExtResource("11_5nr7p")

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer/Attack"]
layout_mode = 2
text = "10242"
label_settings = ExtResource("11_5nr7p")

[node name="Defense" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Text" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer/Defense"]
layout_mode = 2
size_flags_horizontal = 3
text = "Defense"
label_settings = ExtResource("11_5nr7p")

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control2/DerivedStats/VBoxContainer/Defense"]
layout_mode = 2
text = "10242"
label_settings = ExtResource("11_5nr7p")

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Stats" type="TextureButton" parent="HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
texture_normal = ExtResource("3_ln88o")
texture_pressed = ExtResource("12_lajhi")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Buttons/Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Stats"
label_settings = ExtResource("13_l72y0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skills" type="TextureButton" parent="HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
texture_normal = ExtResource("3_ln88o")
texture_pressed = ExtResource("12_lajhi")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Buttons/Skills"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Skills"
label_settings = ExtResource("13_l72y0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Equipment" type="TextureButton" parent="HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(220, 50)
layout_mode = 2
texture_normal = ExtResource("3_ln88o")
texture_pressed = ExtResource("12_lajhi")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Buttons/Equipment"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Equipment"
label_settings = ExtResource("13_l72y0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OuterFrame" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_facp0")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Control/MainStats/StatPoints/Confirm" to="." method="_on_confirm_pressed"]
